// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render in size KILO dark styles 1`] = `
.circuit-0 {
  -webkit-animation: animation-3lk9by-spin 1s infinite linear;
  animation: animation-3lk9by-spin 1s infinite linear;
  border-radius: 24px;
  border: 2px solid #FFFFFF;
  border-top: 2px solid rgba(255,255,255,0.3);
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

<div
  aria-busy="true"
  aria-live="assertive"
  role="alertdialog"
>
  <div
    className="circuit-0 circuit-1"
    size="giga"
  />
</div>
`;

exports[`Spinner should render in size MEGA dark styles 1`] = `
.circuit-0 {
  -webkit-animation: animation-3lk9by-spin 1s infinite linear;
  animation: animation-3lk9by-spin 1s infinite linear;
  border-radius: 24px;
  border: 2px solid #FFFFFF;
  border-top: 2px solid rgba(255,255,255,0.3);
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

<div
  aria-busy="true"
  aria-live="assertive"
  role="alertdialog"
>
  <div
    className="circuit-0 circuit-1"
    size="giga"
  />
</div>
`;

exports[`Spinner should render with dark styles 1`] = `
.circuit-0 {
  -webkit-animation: animation-3lk9by-spin 1s infinite linear;
  animation: animation-3lk9by-spin 1s infinite linear;
  border-radius: 24px;
  border: 2px solid #FFFFFF;
  border-top: 2px solid rgba(255,255,255,0.3);
  height: 32px;
  width: 32px;
  border-radius: 32px;
  border: 2px solid #212933;
  border-top: 2px solid rgba(33,41,51,0.3);
}

<div
  aria-busy="true"
  aria-live="assertive"
  role="alertdialog"
>
  <div
    className="circuit-0 circuit-1"
    size="giga"
  />
</div>
`;

exports[`Spinner should render with default styles 1`] = `
.circuit-0 {
  -webkit-animation: animation-3lk9by-spin 1s infinite linear;
  animation: animation-3lk9by-spin 1s infinite linear;
  border-radius: 24px;
  border: 2px solid #FFFFFF;
  border-top: 2px solid rgba(255,255,255,0.3);
  height: 32px;
  width: 32px;
  border-radius: 32px;
}

<div
  aria-busy="true"
  aria-live="assertive"
  role="alertdialog"
>
  <div
    className="circuit-0 circuit-1"
    size="giga"
  />
</div>
`;
